--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://mywebsite.com/'
 languageCode = 'ta-in'
-title = 'Naveen's Blog'
+title = 'Naveens Blog'
 theme = 'ananke'
 [caches]
   [caches.images]
